# harm

./: .gitignore  Cargo.toml  Makefile  README.md  db.sqlite
.github/ISSUE_TEMPLATE/: 1-bug.yaml  config.yml
.github/workflows/: build.yaml
api/: Cargo.toml
api/src/: config.rs  context.rs  db.rs  lib.rs
api/src/apis/server/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
entity/: Cargo.toml
entity/src/: config.rs
harm/: Cargo.toml
harm/src/: main.rs
harm_desktop/: package.json  vite.config.ts
harm_desktop/src/: App.tsx  main.tsx  routeTree.gen.ts
harm_desktop/src-tauri/: Cargo.toml  tauri.conf.json
harm_desktop/src-tauri/capabilities/: default.json
harm_desktop/src-tauri/src/: config.rs  lib.rs  main.rs
harm_desktop/src/components/: config-context.tsx  init-menu.tsx  shell.tsx
harm_desktop/src/lib/: config.ts
harm_desktop/src/lib/state/: config.tsx  servers.tsx
harm_desktop/src/routes/: __root.tsx  index.lazy.tsx  index.tsx  init.lazy.tsx  init.tsx
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
pm/: Cargo.toml
pm/src/: lib.rs  manager.rs
schemas/: Cargo.toml
schemas/src/: lib.rs
src/: main.rs
