[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { version = "0.1.0", path = "../api" }
clap = { version = "4.5.27", default-features = false, features = ["color", "derive", "help", "std", "suggestions", "usage"] }
entity = { version = "0.1.0", path = "../entity" }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.12.1", features = ["v4"] }
