[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
schemars = { version = "0.8.21", features = ["derive_json_schema", "uuid", "chrono", "arrayvec"] }
sea-orm = { version = "1.1.4", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-json", "with-chrono", "with-uuid"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.12.1", features = ["v4"] }
