[package]
name = "harm_entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "harm_entity"
path = "src/lib.rs"

[features]
schemars = ["dep:schemars"]

[dependencies]
harm_schemas = { version = "0.1.0", path = "../schemas", features = ["schemars", "sea_orm", "serde"] }
schemars = { version = "0.8.21", features = ["derive_json_schema", "uuid"], optional = true }
sea-orm = { version = "1.1.4", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-json", "with-uuid"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
