[package]
name = "harm_pm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
harm_entity = { version = "0.1.0", path = "../entity" }
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "process", "sync"] }
