[package]
name = "harm_pm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
harm_schemas = { version = "0.1.0", path = "../schemas", features = ["serde"] }
serde = "1.0.217"
serde_json = "1.0.138"
slog = "2.7.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "process", "sync"] }
uuid = { version = "1.12.1", features = ["v4"] }
