[package]
name = "harm_schemas"
version = "0.1.0"
edition = "2021"

[features]
schemars = ["dep:schemars"]
serde = ["dep:serde"]
sea_orm = ["dep:sea-orm", "dep:serde_json"]

[dependencies]
schemars = { version = "0.8.21", features = ["derive_json_schema"], optional = true }
sea-orm = { version = "1.1.4", optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde_json = { version = "1.0.138", optional = true }
